<resources>
    <string name="app_name">Second</string>
    <string name="string1">Hello!</string>
    <string name="string2">Happy Birthday</string>
    <string name="button" translatable="false">click me</string>
    <string name="stringTemp">Result:</string>
    <string name="btnTemp">Calculate Fahrenheit</string>
    <string name="input">请输入摄氏度</string>
    <string name="threePoint">+3 points</string>
    <string name="twoPoint">+2 points</string>
    <string name="onePoint">+1 point</string>
    <string name="rdo_home_label">首页</string>
    <string name="rdo_func_label">功能</string>
    <string name="rdo_setting_label">设置</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>
    <string name="rmb_hint_label">input RMB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_first_fragment">first fragment</string>
    <string name="label_second_fragment">second fragment</string>
    <string name="label_third_fragment">third fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="buou">布偶猫</string>
    <string name="mianyin">缅因猫</string>
    <string name="huban">虎斑猫</string>

    <string name="introduction_buou">\u3000\u3000布偶猫，又称“布拉多尔（Ragdoll）”，发源于美国，是一种杂交品种宠物猫。是现存体型最大、体重最重的猫之一。头呈楔形，眼大而圆，被毛丰厚，四肢较长且富有肉感，尾长，身体柔软，毛色有重点色、手套色或双色等等。布偶猫较为温顺好静，对人友善。其美丽优雅又非常类似于狗的性格（Puppy cat）而又被称为"仙女猫"，"小狗猫"。特殊的外貌和温和的性格是布偶猫最大的特点之一。</string>
    <string name="introduction_mianyin">\u3000\u3000缅因猫因原产于美国缅因州而得名，是北美自然产生的第一个长毛猫品种，约于18世纪中叶形成较稳定品种。缅因猫体格强壮，被毛厚密，长像与西伯利亚森林猫相似，在猫类中亦属大体型的品种。</string>
    <string name="introduction_huban">\u3000\u3000虎斑猫，原产美国。黄棕色的底色，夹有纯黑色的斑纹图案，且有一圈较浅的铜色呈环状包围。虎斑猫头部圆润，两耳间距较近，颈略短，肌肉发达。眼睛大而明亮，呈圆杏核状，颜色可以接受由黄色、金色至绿色，通常有眼线。鼻子是砖红色，有鼻线。毛型短而厚、质地生硬。个性独立、活泼、机警。捕鼠能力强。</string>


</resources>
